fix accordion dark mode

--- a/components/grading.module.css
+++ b/components/grading.module.css
@@ -7,16 +7,3 @@
     font-size: 1rem; /* 16px */
     line-height: 1.5rem; /* 24px */
   }
-
-  /* accordion-button
-  flex
-  items-center
-  w-full
-  py-4
-  px-5
-  text-base text-gray-800 text-left
-  bg-white
-  border-0
-  rounded-none
-  transition
-  focus:outline-none */
